--- a/src/styles.css
+++ b/src/styles.css
@@ -85,7 +85,6 @@ button {
     position: center center;
     cursor: pointer;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 nav button {
@@ -103,7 +102,7 @@ nav button {
     background-image: url("./images/menu.png");
 }
 
-.about {
+.contact-us {
     background-image: url("./images/about.png");
 }
 
@@ -128,11 +127,20 @@ div, p {
     border: none;
 }
 
-#content h1 {
-    margin-bottom: 40px;
+#content h1,
+#content h2 {
     font-family: 'Pacifico', cursive;
     color: #1A535C;
     text-align: center;
+}
+
+#content h1 {
+    margin-bottom: 70px;
+}
+
+#content h2 {
+    margin: 70px auto 20px auto;
+    width: 400px;
 }
 
 #content > * {
@@ -152,17 +160,17 @@ div, p {
     height: auto;
     margin: 0 auto;
     padding: 20px;
-    border: none;
     background-color: rgba(240, 240, 240, 0.85);
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+h1, h2 {
     padding: 10px 20px;
 }
 
-#content > h1,
-.details > div {
+#content h1,
+#content h2, 
+.details > div{
     border: 1px solid #457B9D;
     border-radius: 10px;
 }
@@ -171,9 +179,19 @@ h1 {
     margin-top: 35px;
 }
 
-.details > *:not(:first-child) > p:not(.header) {
+.details > * > *:not(.header) {
     text-align: center;
+    margin-top: 10px;
 }
+
+img {
+    width: 200px;
+    height: auto;
+    margin: 0 auto;
+    border: 1px solid #1A535C;
+    border-radius: 10px;
+}
+
 
 footer {
     background-color: #1A535C;
@@ -182,4 +200,12 @@ footer {
     text-align: center;
     width: 100%;
     font-weight: bold;
+}
+
+a {
+    color: inherit;
+}
+
+a:hover {
+    text-decoration: none;
 }
